# PaddleDetection

./: export.sh  export_lite.sh
deploy/cpp/: CMakeLists.txt  infer.sh
deploy/cpp/scripts/: build.sh
deploy/cpp/src/: main.cc  main_keypoint.cc
deploy/lite/: CMakeLists.txt  build.sh  det_runtime_config.json  run.sh
deploy/lite/include/: config_parser.h  picodet_postprocess.h  preprocess_op.h
deploy/lite/src/: main.cc  object_detector.cc
tools/: export_model.py
